# macrohet

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  ND export checker.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  aero_1.0_export_tidy_seg_221213.ipynb  environment.yml  godspeed_241003.yml  godspeed_env.yml  localise_save_as_h5.ipynb  pyproject.toml  reproducibility.md  segmentation.ipynb  setup.cfg  viewer.ipynb  viewer_with_dask_delay.ipynb
.tmp.driveupload/: 108734
aero/: aero_0.5_tile_overlap_dask_fusion_221212.ipynb  harmony_tiling_export.ipynb
data_organisation/: ND export checker.ipynb  collating_sc_data.ipynb  glimpse_graph_pairing.ipynb
docs/: index.html
downstream_analysis/: Untitled.ipynb  assessing_minimum_cell_lifetime_track_len.ipynb  checking_glimpse_videos.ipynb  collating_sc_data.ipynb  control_growth_rates_f1.ipynb  dMtb_modes.ipynb  defining_Mtb_thresh.ipynb  final_frame_image_viewer.ipynb  final_frame_mtb_values_ND0002.csv  final_frame_sc_information.ipynb  growth_rate.ipynb  growth_rate_outliers.ipynb  growth_rate_outliers_mtb_area.ipynb  growth_rate_outliers_mtb_area_smoothed.ipynb  nd2_does_it_replicate_bio-.ipynb  outlier_mtb_measure_type_dev.ipynb  upscale_track_fixing_apr23-btrack_v0.5.0.ipynb  what_min_mtb_area_thresh.ipynb  without_thresh_GFP_biological_replicate_testing_GFP.ipynb
macrohet/: animate.py  colours.py  dataio.py  growth_model.py  label.py  plot.py  tile.py  tools.py  visualise.py
misc/: aero.ipynb  load_claudios_data.ipynb
notebooks/: mtb_growth_model.ipynb  plot_doubling_times.ipynb  segment_and_localise_and_track.ipynb  segment_localise_track.ipynb  tile_image.ipynb
segmentation/: bootstrapping_segmentation.ipynb  param_search_segmentation.ipynb  scoring_segmentation.ipynb
tb_sandbox/: Untitled.ipynb  data_utils.py  sandbox-2.ipynb
tracking/: feat_track_221110-Copy for inputting tqdm in localisation.ipynb  feat_visual_only_track_221111.ipynb  iceberg_new_feature_tracking_btrack_particle_221108.ipynb  tracking_btrack_MSD_220811.ipynb
tracks/: res_track.txt
upstream_labelling/: Labelling_review-Copy1.ipynb  ND2 - zarr load test.ipynb  ND2_1plane_imagesloaded-showing tracks .ipynb  ND2_improving_tracking_1.ipynb  ND3RD1_redo_segment_and_localise_and_track_and_output_tiles.ipynb  ND4-justtrack.ipynb  ND4_seg_troubleshoot-Copy1.ipynb  ND4_track_troubleshoot.ipynb  ND4_trackastra-Copy1.ipynb  ND4_trackastra.ipynb  Untitled.ipynb  Untitled1.ipynb  cdc2024_schedule.ics  cell_classification_work.ipynb  integrating_ND4_trackastra.ipynb  labelling_review.ipynb  relocalise_and_retrack.ipynb  rescale_tracked_data.ipynb  segment_and_localise_and_downscale_track.ipynb  segment_and_localise_and_track-Copy1.ipynb  segment_and_localise_and_track-Copy2.ipynb  segment_and_localise_and_track-on_2nd_model.ipynb  segment_and_localise_and_track.ipynb  segment_and_localise_and_track_SUM_PROJ_DUPICATE.ipynb
viewer/: .~lock.PlateResults_T0.txt#  GFP - nd2_does_it_replicate_bio--Copy1.ipynb  (+61 more)
(+17573 files in other folders)
