[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "macrohet"
version = "2.0.0.dev0"
description = "Single-cell analysis of macrophages infected with Mtb"
authors = [{ name = "Nathan J. Day", email = "nathan.day@crick.ac.uk" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
                "shapely<2.0.0",
                "lxml"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "black", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["macrohet"]
exclude = ["data", "models", "notebooks", "docs"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["tests/data", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "NPY"]  # removed "D"
ignore = [
    "E501",    # line too long
    "D100",    # missing module docstring
    "D101",    # missing class docstring
    "D102",    # missing method docstring
    "D203",    # ignore D203 to allow D211
    "D213"     # ignore D213 to allow D212
]

[tool.ruff.lint.isort]
known-first-party = ["macrohet"]
force-single-line = false
combine-as-imports = true

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
follow_imports = "silent"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
