
[metadata]
name = macrohet
version = 0.1
author = Nathan J. Day
author_email = nathan.day@crick.ac.uk
url = https://github.com/nthndy/macrohet
description = Single-cell analysis of macrophages infected with Mtb
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Bio-Informatics
  Topic :: Scientific/Engineering :: Image Recognition
  Framework :: napari, btrack
  Operating System :: Unix
  Operating System :: MacOS

[options]
python_requires = >=3.7
install_requires =
  dask
  numpy
  scipy
  scikit-image
  btrack
  napari
packages =
  macrohet

[options.extras_require]
tests =
  pytest

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)
# E731 do not assign a lambda function
# W503 Line break occurred before a binary operator
# C901 McCabe complexity test.
ignore = E203, W503, E501, E731, C901
max-line-length = 79
max-complexity = 18
exclude = __init__.py
